[package]
name = "deno-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.171.0"
tokio = { version = "1.25.0", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
lto = true
codegen-units = 1
